@@ -40,8 +40,11 @@
 :- mode array2d_ui == in(array2d).
 :- mode array2d_uo == out(array2d).
 
-    % init(M, N, X) = array2d([[X11, ..., X1N], ..., [XM1, ..., XMN]])
-    % where each XIJ = X.  An exception is thrown if M < 0 or N < 0.
+    % init(NumRows, NumColumns, Elem):
+    % Creates a 2d array with the given numbers of rows and columns
+    % whose every element is set to Elem.
+    %
+    % Throws an exception if either NumRows or NumColumns is negative.
     %
 :- func init(int, int, T) = array2d(T).
 :- mode init(in, in, in) = array2d_uo is det.
@@ -49,21 +52,27 @@
     % array2d([[X11, ..., X1N], ..., [XM1, ..., XMN]]) constructs an array2d
     % of size M * N, with the special case that bounds(array2d([]), 0, 0).
     %
-    % An exception is thrown if the sublists are not all the same length.
+    % In other words, the elements of the top level list each represent
+    % one row, and each row is itself a list of the values in the columns
+    % of that row.
+    %
+    % Throws an exception unless all rows have the same number of columns.
     %
 :- func array2d(list(list(T))) = array2d(T).
 :- mode array2d(in) = array2d_uo is det.
 
-    % A synonym for the above.
+    % A synonym for the array2d function above.
     %
 :- func from_lists(list(list(T))) = array2d(T).
 :- mode from_lists(in) = array2d_uo is det.
 
-    % from_array(M, N, Array) constructs an array2d of size M * N where the
-    % elements are taken from Array in row-major order, i.e. the element at row
-    % I column J is taken from Array at index (I * N + J). Indices start from
-    % zero. Throws an exception if M < 0 or N < 0, or if the number of elements
-    % in Array does not equal M * N.
+    % from_array(NumRows, NumColumns, Array) constructs an array2d
+    % of size NumRows * NumColumns where the elements are taken from Array
+    % in row-major order, i.e. the element at row R column C is taken from
+    % Array at index (R * NumColumns + C). Indices start from zero.
+    %
+    % Throws an exception if NumRows < 0 or NumColumns < 0, or if
+    % the number of elements in Array does not equal NumRows * NumColumns.
     %
 :- func from_array(int, int, array(T)) = array2d(T).
 :- mode from_array(in, in, array_di) = array2d_uo is det.
@@ -72,72 +81,103 @@
     % True iff Array contains zero elements.
     %
 :- pred is_empty(array2d(T)).
-%:- mode is_empty(array2d_ui) is semidet.
+% :- mode is_empty(array2d_ui) is semidet.
 :- mode is_empty(in) is semidet.
 
-    % bounds(array2d([[X11, ..., X1N], ..., [XM1, ..., XMN]), M, N)
+    % bounds(Array, NumRows, NumColumns):
+    %
+    % Returns the number of rows and columns in the given 2d array.
     %
 :- pred bounds(array2d(T), int, int).
-%:- mode bounds(array2d_ui, out, out) is det.
-:- mode bounds(in,       out, out) is det.
+% :- mode bounds(array2d_ui, out, out) is det.
+:- mode bounds(in, out, out) is det.
 
-    % in_bounds(array2d([[X11, ..., X1N], ..., [XM1, ..., XMN]), I, J)
-    % succeeds iff 0 =< I < M, 0 =< J < N.
+    % in_bounds(Array, R, C):
+    %
+    % Succeeds if and only if 0 =< C < NumRows, 0 =< C < NumColumns.
     %
 :- pred in_bounds(array2d(T), int, int).
-%:- mode in_bounds(array2d_ui, in,  in ) is semidet.
-:- mode in_bounds(in,       in,  in ) is semidet.
+% :- mode in_bounds(array2d_ui, in, in) is semidet.
+:- mode in_bounds(in, in, in) is semidet.
 
-    % array2d([[X11, ..., X1N], ..., [XM1, ..., XMN]]) ^ elem(I, J) = X
-    % where X is the J+1'th element of the I+1'th row (that is, indices
-    % start from zero.)
+    % lookup(Array, R, C):
     %
-    % An exception is thrown unless 0 =< I < M, 0 =< J < N.
+    % Given a 2d array Array with NumRows rows and NumColumns columns,
+    % return the element at row R and column C. Indices start at zero.
     %
+    % This function requires 0 =< R < NumRows and 0 =< C < NumColumns.
+    % If this requirement is not satisfied, this function will throw
+    % an exception.
+    %
+:- func lookup(array2d(T), int, int) = T.
+% :- mode lookup(array2d_ui, in, in) = out is det.
+:- mode lookup(in, in, in) = out is det.
+:- pred lookup(array2d(T), int, int, T).
+% :- mode lookup(array2d_ui, in, in, out) is det.
+:- mode lookup(in, in, in, out) is det.
 :- func array2d(T) ^ elem(int, int) = T.
-%:- mode array2d_ui ^ elem(in,  in ) = out is det.
-:- mode in       ^ elem(in,  in ) = out is det.
+% :- mode array2d_ui ^ elem(in, in) = out is det.
+:- mode in ^ elem(in, in) = out is det.
 
-    % T ^ unsafe_elem(I, J) is the same as T ^ elem(I, J) except that
-    % behaviour is undefined if not in_bounds(T, I, J).
+    % unsafe_lookup(Array, R, C):
     %
+    % Given a 2d array Array with NumRows rows and NumColumns columns,
+    % return the element at row R and column C. Indices start at zero.
+    %
+    % This function requires 0 =< R < NumRows and 0 =< C < NumColumns.
+    % If this requirement is not satisfied, the behavior of this function
+    % is undefined.
+    %
+:- func unsafe_lookup(array2d(T), int, int) = T.
+% :- mode unsafe_lookup(array2d_ui, in, in) = out is det.
+:- mode unsafe_lookup(in, in, in) = out is det.
+:- pred unsafe_lookup(array2d(T), int, int, T).
+% :- mode unsafe_lookup(array2d_ui, in, in, out) is det.
+:- mode unsafe_lookup(in, in, in, out) is det.
 :- func array2d(T) ^ unsafe_elem(int, int) = T.
-%:- mode array2d_ui ^ unsafe_elem(in,  in ) = out is det.
-:- mode in       ^ unsafe_elem(in,  in ) = out is det.
+% :- mode array2d_ui ^ unsafe_elem(in, in) = out is det.
+:- mode in ^ unsafe_elem(in, in) = out is det.
 
-    % ( T0 ^ elem(I, J) := X ) = T
-    % where T ^ elem(II, JJ) = X                 if I = II, J = JJ
-    % and   T ^ elem(II, JJ) = T0 ^ elem(II, JJ) otherwise.
+    % set(R, C, NewElem, Array0, Array):
     %
-    % An exception is thrown unless 0 =< I < M, 0 =< J < N.
+    % Return Array, which differs from Array0 only in that
+    % the value at row R and column C is NewElem.
     %
-:- func ( array2d(T) ^ elem(int, int) := T  ) = array2d(T).
-:- mode ( array2d_di ^ elem(in,  in)  := in ) = array2d_uo is det.
+    % Throws an exception unless 0 =< R < NumRows, 0 =< C < NumColumns.
+    %
+:- pred set(int, int, T, array2d(T), array2d(T)).
+:- mode set(in, in, in, array2d_di, array2d_uo) is det.
+:- func (array2d(T) ^ elem(int, int) := T) = array2d(T).
+:- mode (array2d_di ^ elem(in, in) := in) = array2d_uo is det.
 
-    % Pred version of the above.
+    % unsafe_set(R, C, NewElem, Array0, Array):
     %
-:- pred set(int, int, T,  array2d(T), array2d(T)).
-:- mode set(in,  in,  in, array2d_di, array2d_uo) is det.
-
-    % T ^ unsafe_elem(I, J) := X is the same as T ^ elem(I, J) := X except
-    % that behaviour is undefined if not in_bounds(T, I, J).
+    % Return Array, which differs from Array0 only in that
+    % the value at row R and column C is NewElem.
     %
-:- func ( array2d(T) ^ unsafe_elem(int, int) := T  ) = array2d(T).
-:- mode ( array2d_di ^ unsafe_elem(in,  in)  := in ) = array2d_uo is det.
-
-    % Pred version of the above.
+    % The behavior is defined only if 0 =< R < NumRows, 0 =< C < NumColumns.
     %
-:- pred unsafe_set(int, int, T,  array2d(T), array2d(T)).
-:- mode unsafe_set(in,  in,  in, array2d_di, array2d_uo) is det.
+:- pred unsafe_set(int, int, T, array2d(T), array2d(T)).
+:- mode unsafe_set(in, in, in, array2d_di, array2d_uo) is det.
+:- func (array2d(T) ^ unsafe_elem(int, int) := T ) = array2d(T).
+:- mode (array2d_di ^ unsafe_elem(in, in) := in) = array2d_uo is det.
 
-    % lists(array2d([[X11, ..., X1N], ..., [XM1, ..., XMN])) =
-    %     [[X11, ..., X1N], ..., [XM1, ..., XMN]]
+
+    % lists(Array):
+    %
+    % Return the contents of the given 2d array as a list of rows,
+    % with each row containing the values in its columns.
+    %
+    % This function is the converse of from_lists.
+    % For every Array, from_lists(lists(Array) = Array,
+    % and for every Lists for from_lists(Lists) does not throw
+    % an exception, lists(from_lists(Lists) = Lists.
     %
 :- func lists(array2d(T)) = list(list(T)).
-%:- mode lists(array2d_ui) = out is det.
-:- mode lists(in        ) = out is det.
+% :- mode lists(array2d_ui) = out is det.
+:- mode lists(in) = out is det.
 
-    % fill(Item, !Array2d):
+    % fill(Item, !Array):
     % Sets every element of the array to Item.
     %
 :- pred fill(T::in, array2d(T)::array2d_di, array2d(T)::array2d_uo) is det.
@@ -156,9 +196,16 @@
     %
 :- type array2d(T)
     --->    array2d(
-                int,        % rows
-                int,        % cols
-                array(T)    % array
+                % The number of rows.
+                int,
+
+                % The number of columns.
+                int,
+
+                % The contents of the 2d array, flattaned out.
+                % It stores the element at row R and column C at 
+                % index (R * NumColumns) + C in the flattened array.
+                array(T)
             ).
 
 :- implementation.
@@ -166,38 +213,44 @@
 
 %---------------------------------------------------------------------------%
 
-init(M, N, X) =
-    ( if M >= 0, N >= 0 then
-        array2d(M, N, array.init(M * N, X))
+init(NumRows, NumColumns, Elem) =
+    ( if NumRows >= 0, NumColumns >= 0 then
+        array2d(NumRows, NumColumns, array.init(NumRows * NumColumns, Elem))
     else
         func_error($pred, "bounds must be non-negative")
     ).
 
 %---------------------------------------------------------------------------%
 
-array2d([]) = array2d(0, 0, make_empty_array).
-array2d(Xss @ [Xs | _]) = T :-
-    M = length(Xss),
-    N = length(Xs),
-    A = array(condense(Xss)),
-    ( if all [Ys] ( member(Ys, Xss) => length(Ys) = N ) then
-        T = array2d(M, N, A)
+array2d(Rows) = from_lists(Rows).
+
+from_lists([]) = array2d(0, 0, make_empty_array).
+from_lists(Rows @ [FirstRow | _]) = Array :-
+    NumRows = list.length(Rows),
+    NumColumns = list.length(FirstRow),
+    ( if
+        all [Row] (
+            list.member(Row, Rows)
+        =>
+            list.length(Row) = NumColumns
+        )
+    then
+        A = array(list.condense(Rows)),
+        Array = array2d(NumRows, NumColumns, A)
     else
-        error($pred,  "non-rectangular list of lists")
+        error($pred, "non-rectangular list of lists")
     ).
 
-from_lists(Xss) = array2d(Xss).
-
-from_array(M, N, Array) = Array2d :-
+from_array(NumRows, NumColumns, Array) = Array2d :-
     ( if
-        M >= 0,
-        N >= 0
+        NumRows >= 0,
+        NumColumns >= 0
     then
         array.size(Array, Size),
-        compare(Result, Size, M * N),
+        compare(Result, Size, NumRows * NumColumns),
         (
             Result = (=),
-            Array2d = array2d(M, N, Array)
+            Array2d = array2d(NumRows, NumColumns, Array)
         ;
             Result = (>),
             error($pred, "too many elements")
@@ -216,70 +269,100 @@ is_empty(array2d(_, _, A)) :-
 
 %---------------------------------------------------------------------------%
 
-bounds(array2d(M, N, _A), M, N).
+bounds(array2d(NumRows, NumColumns, _A), NumRows, NumColumns).
 
 %---------------------------------------------------------------------------%
 
-in_bounds(array2d(M, N, _A), I, J) :-
-    0 =< I, I < M,
-    0 =< J, J < N.
+in_bounds(array2d(NumRows, NumColumns, _A), R, C) :-
+    0 =< R, R < NumRows,
+    0 =< C, C < NumColumns.
 
 %---------------------------------------------------------------------------%
 
-T ^ elem(I, J) =
-    ( if in_bounds(T, I, J) then
-        T ^ unsafe_elem(I, J)
+lookup(Array, R, C) = Elem :-
+    ( if in_bounds(Array, R, C) then
+        Elem = unsafe_lookup(Array, R, C)
     else
-        func_error($pred, "indices out of bounds")
+        error($pred, "indices out of bounds")
+    ).
+
+lookup(Array, R, C, Elem) :-
+    Elem = lookup(Array, R, C).
+
+Array ^ elem(R, C) =
+    lookup(Array, R, C).
+
+%---------------------------------------------------------------------------%
+
+unsafe_lookup(Array, R, C) = Elem :-
+    Array = array2d(_NumRows, NumColumns, A),
+    array.unsafe_lookup(A, (R * NumColumns) + C, Elem).
+
+unsafe_lookup(Array, R, C, Elem) :-
+    Elem = unsafe_lookup(Array, R, C).
+
+Array ^ unsafe_elem(R, C) =
+    unsafe_lookup(Array, R, C).
+
+%---------------------------------------------------------------------------%
+
+set(R, C, Value, !Array) :-
+    ( if in_bounds(!.Array, R, C) then
+        unsafe_set(R, C, Value, !Array)
+    else
+        error($pred, "indices out of bounds")
+    ).
+
+( Array0 ^ elem(R, C) := Value ) = Array :-
+    set(R, C, Value, Array0, Array).
+
+%---------------------------------------------------------------------------%
+
+unsafe_set(R, C, Value, !Array) :-
+    !.Array = array2d(NumRows, NumColumns, A0),
+    array.unsafe_set((R * NumColumns) + C, Value, A0, A),
+    !:Array = array2d(NumRows, NumColumns, A).
+
+( Array0 ^ unsafe_elem(R, C) := Value ) = Array :-
+    unsafe_set(R, C, Value, Array0, Array).
+
+%---------------------------------------------------------------------------%
+
+lists(array2d(NumRows, NumColumns, A)) = Rows :-
+    get_rows(NumRows - 1, NumColumns, A, [], Rows).
+
+:- pred get_rows(int, int, array(T), list(list(T)), list(list(T))).
+% :- mode get_rows(in, in, array_ui, in, out) is det.
+:- mode get_rows(in, in, in, in, out) is det.
+
+get_rows(RowNum, NumColumns, A, !Rows) :-
+    ( if RowNum >= 0 then
+        get_columns(RowNum, NumColumns - 1, NumColumns, A, [], Columns),
+        !:Rows = [Columns | !.Rows],
+        get_rows(RowNum - 1, NumColumns, A, !Rows)
+    else
+        true
+    ).
+
+:- pred get_columns(int, int, int, array(T), list(T), list(T)).
+% :- mode get_columns(in, in, in, array_ui, in, out) is det.
+:- mode get_columns(in, in, in, in, in, out) is det.
+
+get_columns(RowNum, ColumnNum, NumColumns, A, !Columns) :-
+    ( if ColumnNum >= 0 then
+        array.unsafe_lookup(A, (RowNum * NumColumns) + ColumnNum, Elem),
+        !:Columns = [Elem | !.Columns],
+        get_columns(RowNum, ColumnNum - 1, NumColumns, A, !Columns)
+    else
+        true
     ).
 
 %---------------------------------------------------------------------------%
 
-array2d(_M, N, A) ^ unsafe_elem(I, J) = A ^ unsafe_elem(I * N + J).
-
-%---------------------------------------------------------------------------%
-
-( T ^ elem(I, J) := X ) =
-    ( if in_bounds(T, I, J) then
-        T ^ unsafe_elem(I, J) := X
-    else
-        func_error("array2d.'elem :=': indices out of bounds")
-    ).
-
-set(I, J, X, A, A ^ elem(I, J) := X).
-
-%---------------------------------------------------------------------------%
-
-( array2d(M, N, A) ^ unsafe_elem(I, J) := X ) =
-    array2d(M, N, A ^ unsafe_elem(I * N + J) := X).
-
-unsafe_set(I, J, X, A, A ^ unsafe_elem(I, J) := X).
-
-%---------------------------------------------------------------------------%
-
-lists(array2d(M, N, A)) = lists_2((M * N) - 1, N - 1, N, A, [], []).
-
-:- func lists_2(int, int, int, array(T), list(T), list(list(T))) =
-            list(list(T)).
-%:- mode lists_2(in,  in,  in,  array_ui, in,      in           ) = out is det.
-:- mode lists_2(in,  in,  in,  in,       in,      in           ) = out is det.
-
-lists_2(IJ, J, N, A, Xs, Xss) =
-    ( if 0 =< IJ then
-        ( if    0 =< J
-          then  lists_2(IJ - 1, J - 1, N, A, [A ^ elem(IJ) | Xs], Xss       )
-          else  lists_2(IJ,     N - 1, N, A, [],                  [Xs | Xss])
-        )
-      else
-         [Xs | Xss]
-     ).
-
-%---------------------------------------------------------------------------%
-
-fill(Item, A0, A) :-
-    A0 = array2d(M, N, Array0),
-    array.fill(Item, Array0, Array),
-    A = array2d(M, N, Array).
+fill(Item, Array0, Array) :-
+    Array0 = array2d(NumRows, NumColumns, A0),
+    array.fill(Item, A0, A),
+    Array = array2d(NumRows, NumColumns, A).
 
 %---------------------------------------------------------------------------%
 :- end_module array2d.
