@@ -1,5 +1,5 @@
 Empty =
-[[]]
+[]
 
 One =
 [[1]]
@@ -30,13 +30,13 @@ Zeroes =
  [0, 0, 0]
  [0, 0, 0]]
 
-Empty ^ elem(0, 0) = exception(univ_cons(software_error("function `array2d.elem\'/3: indices out of bounds")))
-Zeroes ^ elem(-1, 0) = exception(univ_cons(software_error("function `array2d.elem\'/3: indices out of bounds")))
-Zeroes ^ elem(0, -1) = exception(univ_cons(software_error("function `array2d.elem\'/3: indices out of bounds")))
-Zeroes ^ elem(-1, -1) = exception(univ_cons(software_error("function `array2d.elem\'/3: indices out of bounds")))
-Zeroes ^ elem(3, 0) = exception(univ_cons(software_error("function `array2d.elem\'/3: indices out of bounds")))
-Zeroes ^ elem(0, 3) = exception(univ_cons(software_error("function `array2d.elem\'/3: indices out of bounds")))
-Zeroes ^ elem(3, 3) = exception(univ_cons(software_error("function `array2d.elem\'/3: indices out of bounds")))
+Empty ^ elem(0, 0) = exception(univ_cons(software_error("function `array2d.lookup\'/3: indices out of bounds")))
+Zeroes ^ elem(-1, 0) = exception(univ_cons(software_error("function `array2d.lookup\'/3: indices out of bounds")))
+Zeroes ^ elem(0, -1) = exception(univ_cons(software_error("function `array2d.lookup\'/3: indices out of bounds")))
+Zeroes ^ elem(-1, -1) = exception(univ_cons(software_error("function `array2d.lookup\'/3: indices out of bounds")))
+Zeroes ^ elem(3, 0) = exception(univ_cons(software_error("function `array2d.lookup\'/3: indices out of bounds")))
+Zeroes ^ elem(0, 3) = exception(univ_cons(software_error("function `array2d.lookup\'/3: indices out of bounds")))
+Zeroes ^ elem(3, 3) = exception(univ_cons(software_error("function `array2d.lookup\'/3: indices out of bounds")))
 
 [11, 12, 13, 14, 15, 16]
 [21, 22, 23, 24, 25, 26]
